Hiding future content

--- a/1_programming/20_visualization.ipynb
+++ b/1_programming/20_visualization.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizing data is a key part of data science.  It is not only a way to communicate your findings to others but, arguably more importantly, it is a way to understand your data, models and algorithms better. \n",
+    "<!-- Visualizing data is a key part of data science.  It is not only a way to communicate your findings to others but, arguably more importantly, it is a way to understand your data, models and algorithms better. \n",
     "\n",
     "In this section, we will learn how to use the libraries `matplotlib` and `seaborn` to create visualizations.\n",
     "\n",
@@ -24,7 +24,7 @@
     "1. Uni-variate visualization: visualizing a single variable.\n",
     "\n",
     "2. Multi-variate visualization: visualizing multiple variables\n",
-    "\n"
+    " -->\n"
    ]
   }
  ],
