--- a/1_programming/30_collecting.ipynb
+++ b/1_programming/30_collecting.ipynb
@@ -13,14 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Collecting data is the first step in the data science process. It is the process of gathering data from various sources. The data can be structured or unstructured. The data can be collected from various sources like databases, web, sensors, etc. The data can be collected in various formats like CSV, JSON, XML, etc. The data can be collected using various tools like Python, R, etc.\n",
+    "<!-- Collecting data is the first step in the data science process. It is the process of gathering data from various sources. The data can be structured or unstructured. The data can be collected from various sources like databases, web, sensors, etc. The data can be collected in various formats like CSV, JSON, XML, etc. The data can be collected using various tools like Python, R, etc.\n",
     "\n",
     "In this section, we will go over two ways of collecting data: \n",
     "\n",
     "1. Using an API\n",
     "2. Using a Web Scraper\n",
     "\n",
-    "Both of the methods above rely on the internet to collect data. This requires knowing how to use Python to make requests to the internet. We will go over this in the next section and understand the basic architecture of the internet."
+    "Both of the methods above rely on the internet to collect data. This requires knowing how to use Python to make requests to the internet. We will go over this in the next section and understand the basic architecture of the internet. -->"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Architecture of the Internet"
+    "<!-- ## Architecture of the Internet -->"
    ]
   },
   {
@@ -36,13 +36,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The basic architecture of the internet is the client-server architecture. The client is the computer that makes the request to the server. The server is the computer that responds to the request. The client and server communicate using the HTTP protocol. The client sends a request to the server using the HTTP protocol. The server responds to the request using the HTTP. This communication is done using the TCP/IP protocol. \n",
+    "<!-- The basic architecture of the internet is the client-server architecture. The client is the computer that makes the request to the server. The server is the computer that responds to the request. The client and server communicate using the HTTP protocol. The client sends a request to the server using the HTTP protocol. The server responds to the request using the HTTP. This communication is done using the TCP/IP protocol. \n",
     "\n",
     "The client and server can be any computer. \n",
     "\n",
     "A server is a computer generally located in a data center. A data center is a building that houses many computers. The data center is connected to the internet. The server is connected to the internet. The client is also connected to the internet.\n",
     "\n",
-    "The server is generally a web server, database server, etc. The client can be a web browser, mobile app, etc. "
+    "The server is generally a web server, database server, etc. The client can be a web browser, mobile app, etc.  -->"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Client Server model"
+    "<!-- ### Client Server model -->"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### HTTP\n",
+    "<!-- ### HTTP\n",
     "\n",
     "HTTP stands for Hyper Text Transfer Protocol. It is a protocol that is used to transfer hypertext over the internet.\n",
     "\n",
@@ -99,7 +99,7 @@
     "\n",
     "### Hypertext\n",
     "\n",
-    "HyperText is text that contains links to other text. The links are called hyperlinks. The text containing the links is called hypertext. The hypertext is displayed in a web browser."
+    "HyperText is text that contains links to other text. The links are called hyperlinks. The text containing the links is called hypertext. The hypertext is displayed in a web browser. -->"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requesting and Parsing Content"
+    "<!-- ## Requesting and Parsing Content -->"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `requests`"
+    "<!-- ### `requests` -->"
    ]
   },
   {
@@ -123,13 +123,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "requests library is a Python library that is used to make HTTP requests. It is a third-party library. It is not part of the Python standard library. It is installed using the pip command. It is imported using the import statement.\n",
+    "<!-- requests library is a Python library that is used to make HTTP requests. It is a third-party library. It is not part of the Python standard library. It is installed using the pip command. It is imported using the import statement.\n",
     "\n",
     "An HTTP request is made using the requests.get() function. The requests.get() function takes a URL as an argument. The requests.get() function returns a response object. The response object contains the response from the server. The response object has a status code. The status code is a number that indicates the status of the request. The status code is 200 if the request is successful. The status code is 404 if the request is not found. The status code is 500 if there is an internal server error.\n",
     "\n",
     "### `BeautifulSoup`\n",
     "\n",
-    "BeautifulSoup is a Python library that is used to parse HTML. It is a third-party library. It is not part of the Python standard library. It is installed using the pip command. It is imported using the import statement."
+    "BeautifulSoup is a Python library that is used to parse HTML. It is a third-party library. It is not part of the Python standard library. It is installed using the pip command. It is imported using the import statement. -->"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `beautifulsoup`"
+    "<!-- ### `beautifulsoup` -->"
    ]
   }
  ],
