--- a/1_programming/40_modalities.ipynb
+++ b/1_programming/40_modalities.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "<!-- \n",
     "Modality is a term used to describe the way data is represented. For example, a single image is a 2D array of pixels. A video is a sequence of images. A sound is a 1D array of samples. A text is a sequence of characters.\n",
     "\n",
     "There are too many modalities to list them all. Each modality has its own characteristics and requires different methods to process and analyze. Each data modality has its own area of research and expertise. For example, computer vision is the area of research that deals with images and videos. Speech processing is the area of research that deals with sounds. Natural language processing is the area of research that deals with text.\n",
@@ -29,7 +29,7 @@
     "\n",
     "\n",
     "There are many different ways to represent data. In this section, we will discuss the most common modalities of data and how to work with them in Python.\n",
-    "\n"
+    " -->\n"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are too many data modalities to enumerate here. \n",
+    "<!-- There are too many data modalities to enumerate here. \n",
     "\n",
     "We are going to focus on just tabular data. Mathematically, there would be matrix representations.\n",
     "\n",
@@ -48,7 +48,7 @@
     "3. **Sounds**: Digital Signal Processing (DSP)\n",
     "4. **Graphs**: Graph Theory, Network Theory\n",
     "5. **Time Series**: Time Series Analysis\n",
-    "6. **Geographic**: Geographic Information Systems (GIS), Spatial Computing."
+    "6. **Geographic**: Geographic Information Systems (GIS), Spatial Computing. -->"
    ]
   }
  ],
