--- a/2_maths/20_logarithms.ipynb
+++ b/2_maths/20_logarithms.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logarithms are the inverse of exponentials. They are useful for transforming data that is skewed towards large values and also for making data more interpretable.\n",
+    "<!-- Logarithms are the inverse of exponentials. They are useful for transforming data that is skewed towards large values and also for making data more interpretable.\n",
     "\n",
     "The logarithm of a number is the exponent to which another fixed value, the base, must be raised to produce that number. For example, the logarithm of 1000 to base 10 is 3, because 1000 is 10 to the power 3: 1000 = 10 × 10 × 10 = 10^3.\n",
     "\n",
@@ -49,15 +49,8 @@
     "\n",
     "logb(λx + (1 − λ)y) ≥ λlogb(x) + (1 − λ)logb(y)\n",
     "\n",
-    "for any positive real numbers x and y, and any number λ between 0 and 1.\n"
+    "for any positive real numbers x and y, and any number λ between 0 and 1. -->\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
