--- a/2_maths/40_linearalgebra.ipynb
+++ b/2_maths/40_linearalgebra.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linear algebra is the branch of mathematics that deals with vector spaces. It is a fundamental tool in many fields, including data science and machine learning. In this section, we will review some of the basic concepts of linear algebra.\n",
+    "<!-- Linear algebra is the branch of mathematics that deals with vector spaces. It is a fundamental tool in many fields, including data science and machine learning. In this section, we will review some of the basic concepts of linear algebra.\n",
     "\n",
     "## Vectors\n",
     "\n",
@@ -40,7 +40,7 @@
     "Linear transformations can be represented as matrices. For example, a rotation of 90 degrees clockwise about the origin can be represented as the matrix\n",
     "\n",
     "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
-    "\n"
+    " -->\n"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "<!-- \n",
     "## Eigenvectors and Eigenvalues\n",
     "\n",
     "An eigenvector is a vector that does not change direction when a linear transformation is applied to it. For example, the vector (1, 0) is an eigenvector of the matrix\n",
@@ -120,13 +120,8 @@
     "because\n",
     "\n",
     "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix} $$\n",
-    "\n"
+    " -->\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
