--- a/2_maths/50_calculus.ipynb
+++ b/2_maths/50_calculus.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculus is the study of continuous change. It has two major branches, differential calculus and integral calculus. The former concerns instantaneous rates of change (derivatives), while the latter concerns accumulation of quantities (integrals).\n",
+    "<!-- Calculus is the study of continuous change. It has two major branches, differential calculus and integral calculus. The former concerns instantaneous rates of change (derivatives), while the latter concerns accumulation of quantities (integrals).\n",
     "\n",
     "Both branches are relevant to machine learning. For example, the derivative of a function is used to find the slope of a line tangent to a curve. This is useful for finding the minimum of a function, which is a common task in machine learning. The integral of a function is used to find the area under a curve. This is useful for finding the probability of an event occurring, which is also a common task in machine learning.\n",
     "\n",
@@ -39,7 +39,7 @@
     "$$\\int_a^b f(x) dx = \\lim_{n \\to \\infty} \\sum_{i=1}^n f(x_i) \\Delta x$$\n",
     "\n",
     "\n",
-    "\n"
+    " -->\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Common Derivatives\n",
+    "<!-- ## Common Derivatives\n",
     "\n",
     "| Function | Derivative |\n",
     "| --- | --- |\n",
@@ -101,13 +101,8 @@
     "Other cost functions are used for other types of machine learning models. For example, the cost function for logistic regression is the negative log-likelihood:\n",
     "\n",
     "$$J(\\theta) = -\\sum_{i=1}^n \\left[ y_i \\log \\hat{y}_i + (1 - y_i) \\log (1 - \\hat{y}_i) \\right]$$\n",
-    "\n"
+    " -->\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
