--- a/3_problems_in/22_kmeans.ipynb
+++ b/3_problems_in/22_kmeans.ipynb
@@ -13,14 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Generative Model\n",
+    "<!-- * Generative Model\n",
     "\n",
     "* Parametric Model\n",
     "\n",
     "|                | Generative | Discriminative |\n",
     "|------------    |------------|----------------|\n",
     "| **Parametric**     |  ✅       |                |\n",
-    "| **Non parameteric**|            |                |"
+    "| **Non parameteric**|            |                | -->"
    ]
   },
   {
@@ -28,9 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "<!-- \n",
     "1. How is Nearest Neighbor even an algorithm? \n",
-    "2. Are all regression models generative? "
+    "2. Are all regression models generative?  -->"
    ]
   }
  ],
