--- a/4_models/graphical.ipynb
+++ b/4_models/graphical.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Graphical model is a probabilistic model for which a graph expresses the conditional dependence structure between random variables. They are commonly used in probability theory, statistics - particularly Bayesian statistics - and machine learning."
+    "<!-- Graphical model is a probabilistic model for which a graph expresses the conditional dependence structure between random variables. They are commonly used in probability theory, statistics - particularly Bayesian statistics - and machine learning. -->"
    ]
   },
   {
@@ -21,12 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The optimization algorithms are: \n",
+    "<!-- The optimization algorithms are: \n",
     "\n",
     "1. EM Algorithm\n",
     "2. Gradient Descent\n",
     "3. Backpropagation\n",
-    "4. Gibbs Sampling"
+    "4. Gibbs Sampling -->"
    ]
   }
  ],
