--- a/5_algos/em.ipynb
+++ b/5_algos/em.ipynb
@@ -13,16 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EM is a method for finding maximum likelihood estimates of parameters in probabilistic models, where the model depends on unobserved latent variables. EM iteratively performs two steps: expectation and maximization."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('em');"
+    "<!-- EM is a method for finding maximum likelihood estimates of parameters in probabilistic models, where the model depends on unobserved latent variables. EM iteratively performs two steps: expectation and maximization. -->"
    ]
   }
  ],
