--- a/6_problems_with/10_representation.ipynb
+++ b/6_problems_with/10_representation.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Minority Class as 1. Majority class as 0."
+    "<!-- ## Minority Class as 1. Majority class as 0. -->"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Weighted Cost Functions"
+    "<!-- ## Weighted Cost Functions -->"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Weighted Evaluation"
+    "<!-- ## Weighted Evaluation -->"
    ]
   },
   {
@@ -37,20 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confusion matrix? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print('Hello world')"
+    "<!-- ## Confusion matrix?  -->"
    ]
   }
  ],
