--- a/6_problems_with/20_boundaries.ipynb
+++ b/6_problems_with/20_boundaries.ipynb
@@ -9,17 +9,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
    "source": [
-    "print('Marginalization of the marginalized')\n",
-    "print('Peripheries')"
+    "<!-- print('Marginalization of the marginalized')\n",
+    "print('Peripheries') -->"
    ]
   }
  ],
