--- a/6_problems_with/30_incentives.ipynb
+++ b/6_problems_with/30_incentives.ipynb
@@ -9,17 +9,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Perverse Incentives\n",
-    "Majority rule "
+    "<!-- Perverse Incentives\n",
+    "Majority rule  -->"
    ]
   }
  ],
