--- a/6_problems_with/40_feedback.ipynb
+++ b/6_problems_with/40_feedback.ipynb
@@ -9,17 +9,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print('Reinforcement of the status quo')\n",
-    "print('Polarization')"
+    "<!-- print('Reinforcement of the status quo')\n",
+    "print('Polarization')\n",
+    "\n",
+    "## Echo Chambers -->"
    ]
   },
   {
@@ -27,14 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Echo Chambers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Polarization"
+    "<!-- ### Polarization -->"
    ]
   },
   {
@@ -42,13 +32,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reinforcement of the Status Quo"
+    "<!-- ## Reinforcement of the Status Quo -->"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
