--- a/5_algos/backprop.ipynb
+++ b/5_algos/backprop.ipynb
@@ -13,16 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Backpropogation is a method of training a neural network by calculating the gradient of the loss function with respect to the weights using the chain rule of calculus. The gradient is then used to update the weights in the direction of the negative gradient to minimize the loss function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Backprop')"
+    "<!-- Backpropogation is a method of training a neural network by calculating the gradient of the loss function with respect to the weights using the chain rule of calculus. The gradient is then used to update the weights in the direction of the negative gradient to minimize the loss function. -->"
    ]
   }
  ],
