--- a/5_algos/gradient_descent.ipynb
+++ b/5_algos/gradient_descent.ipynb
@@ -13,16 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gradient descent is an optimization algorithm used to minimize some function by iteratively moving in the direction of steepest descent as defined by the negative of the gradient. In machine learning, we use gradient descent to update the parameters of our model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Gradient Descent')"
+    "<!-- Gradient descent is an optimization algorithm used to minimize some function by iteratively moving in the direction of steepest descent as defined by the negative of the gradient. In machine learning, we use gradient descent to update the parameters of our model. -->"
    ]
   }
  ],
