--- a/1_programming/10_dataops.ipynb
+++ b/1_programming/10_dataops.ipynb
@@ -13,13 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Computer Science is all about getting computers to perform tasks for us efficiently, reliably and correctly.\n",
+    "<!-- Computer Science is all about getting computers to perform tasks for us efficiently, reliably and correctly.\n",
     "\n",
     "When we talk about efficiency, we are talking both space and time. \n",
     "\n",
     "Given we are living through the data deluge of the 21st century, when working with data, the issues of time (speed) and space (memory) are particularly relevant.\n",
     "\n",
-    "Let's talk about speed first. "
+    "Let's talk about speed first.  -->"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time Complexity"
+    "<!-- ## Time Complexity -->"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "<!-- \n",
     "\n",
     "Computer Scientists are a little paranoid, when it comes to speed. They/We always assume the worst! \n",
     "\n",
@@ -112,14 +112,15 @@
     "Improving speed of an algorithm often comes at the cost of more memory consumption. That is, improving speed of an algorithm often necessitates creation or use of data structures that allow faster data retrieval and processing times. In that sense, speed and memory have an inherent tension in Computer Science. In this course, we are going to use such data structures that are going to result in very fast code. But the price we have to pay as a result is that we can only work with data sets that can fit within our memory. For most people it is going to be on the order of 8-16 GB. \n",
     "\n",
     "Datasets of today are often much larger than this and require alternative paradigms of computer programming such as Distibuted Computing etc. \n",
-    "\n"
+    " -->\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are two primary considerations in Computer Science: speed and space. "
+    "<!-- There are two primary considerations in Computer Science: speed and space.  -->"
    ]
   }
  ],
