Fixed typos + Link to launch Colab

--- a/1_programming/pandas1.ipynb
+++ b/1_programming/pandas1.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## Tabular Data\n",
     "\n",
-    "Data scientists work with data stored in a variety of formats. The primary focus of this class is in understanding )_tabular data_ –– data that is stored in a table.\n",
+    "Data scientists work with data stored in a variety of formats. The primary focus of this class is in understanding _tabular data_ –– data that is stored in a table.\n",
     "\n",
     "Tabular data is one of the most common systems that data scientists use to organize data. This is in large part due to the simplicity and flexibility of tables. Tables allow us to represent each **observation**, or instance of collecting data from an individual, as its own row. We can record distinct characteristics, or **features**, of each observation in separate columns.\n",
     "\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "[182 rows x 6 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
     "# `pd` is the conventional alias for Pandas, as `np` is for NumPy\n",
     "import pandas as pd\n",
     "\n",
-    "pd.read_csv(\"../data/elections.csv\")"
+    "pd.read_csv(\"https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/data/elections.csv\")"
    ]
   },
   {
