--- a/1_programming/pandas2.ipynb
+++ b/1_programming/pandas2.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "``` {image} file:///Users/fsultan/Downloads/datascience_ml/_build/html/_images/filter.png\n",
+    "``` {image} https://fahadsultan.com/datascience_ml/_images/filter.png\n",
     ":width: 50%\n",
     ":align: center\n",
     "```"
@@ -3515,6 +3515,8 @@
     "\n",
     "- `.shape`\n",
     "- `.size`\n",
+    "- `.dtypes`\n",
+    "- `.astype()`\n",
     "- `.describe() `\n",
     "- `.sample()`\n",
     "- `.value_counts()`\n",
